tests/snapshots/snapshot__case_2_raw_encoding.snap
---
source: tests/snapshot.rs
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
INFO  Hello, world!
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  device halted without error

