tests/snapshots/snapshot__case_3_successful_run_can_enforce_backtrace.snap
---
source: tests/snapshot.rs
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
INFO  Hello, world!
────────────────────────────────────────────────────────────────────────────────
stack backtrace:
   0: lib::inline::__bkpt
        at ./asm/inline.rs:13:5
   1: __bkpt
        at ./asm/lib.rs:49:17
   2: app::exit
        at /tmp/app/src/lib.rs:16:5
   3: hello::__cortex_m_rt_main
        at /tmp/app/src/bin/hello.rs:9:5
   4: main
        at /tmp/app/src/bin/hello.rs:6:1
   5: ResetTrampoline
        at [cortex-m-rt-0.6.14]/src/lib.rs:547:26
   6: Reset
        at [cortex-m-rt-0.6.14]/src/lib.rs:550:13
(HOST) INFO  device halted without error

