tests/snapshots/snapshot__ctrl_c_by_user_is_reported_as_such.snap
---
source: tests/snapshot.rs
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────
stack backtrace:
   0: main
   1: ResetTrampoline
        at [cortex-m-rt-0.6.14]/src/lib.rs:547:26
   2: Reset
        at [cortex-m-rt-0.6.14]/src/lib.rs:550:13
(HOST) INFO  device halted by user

